# cv-frontend-vue

./: .env  .env.example  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .releaserc.json  CHANGELOG.md  GETTING_STARTED.md  PR_857_CODE_CHANGES.md  PR_857_VISUAL_DOCUMENTATION.md  PR_ANDGATE_TYPESCRIPT.md  README.md  build-desktop.js  build-desktop.sh  build.js  build.sh  bun.lockb  create-pr.sh  desktop.config.ts  desktop.sh  desktop.v0.ts  eslint.config.mjs  index-cv.html  index.html  issue-labels.md  issue.md  jest.config.js  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  rollup.worker.config.mjs  sentry.properties  tauri-build.js  tsconfig.json  tsconfig.node.json  version.json  versions.json  vite.config.ts  vite.config.v0.ts  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: CD.yml  CI.yml  Conventional-commits.yml  Tauri-Release.yml  Tauri-testing.yml  codeql.yml  continuous-integration-workflow.yml  conventional-commit.yml  desktop_build.sh  desktoprelease.yml  eslint.yml  lint.yml  manual-release.yml  manual.yml  release.yml  run-tests.yml  semantic-release.yml  simulator-test.yml  simulator-tests.yml  tauri-build-test.yml  tauri-build.yml  tauri-driver.yml  tauri-release.yml  tauri-tests.yml  tests.yml  vitest.yml  websimulatortest.yml
.husky/: post-checkout  post-commit  post-merge  pre-push
docs/: simulator-data-flow.md
public/: yosys-worker.js  yosys2digitaljs-core.js  yosys2digitaljs.js
scripts/: build.js  dev.js  download-yosys-wasm.js  multi-build.js
src/: App.vue  env.d.ts  globalVariables.ts  main.ts  sentry.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
types/: codemirror.d.ts  window.d.ts
v1/: embed.html  index.html
version/: config.ts  main.ts  versionLoader.ts
(+784 files in other folders)
