[package]
name = "CircuitVerse"
version = "0.1.0"
description = "CircuitVerse Simulator"
authors = ["CircuitVerse Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.3", features = ["devtools"] }
tauri-plugin-http = "2.5.5"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2.4.5"
