[package]
name = "CircuitVerse"
version = "0.1.0"
description = "CircuitVerse Simulator"
authors = ["CircuitVerse Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = ["devtools"] }
tauri-plugin-http = "2"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2"

[profile.dev]
incremental = true  # Fast rebuilds during development

[profile.release]
incremental = false         
codegen-units = 1           # Use one code generation unit to improve cross-module optimization
lto = true                  # Enable Link Time Optimization to optimize across the entire binary
opt-level = "s"             # Optimize for small binary size.
panic = "abort"             
strip = true                
debug = false               
debug-assertions = false   
